tests/ui/rename/test_rename_path.stderr
error: Invalid format
 --> $DIR/test_rename_path.rs:5:17
  |
5 |     #[shorthand(rename)]
  |                 ^^^^^^
